style.css
* {
    box-sizing: border-box;
}
body {
    text-align: center;
    font-size: 12px;
    margin: 0;
    padding: 0;
    background-image: url("art/bgtan.png");
    background-attachment: fixed;
}
.nav {
    width: 180px;
    padding: 6px;
    position: fixed;
    height: 100%;
}
.nav a {
    font-family: 'Aref Ruqaa Ink';
    font-size: 16px;
    background-color: darkslategray;
    color: beige;
    padding: 2px;
    border: 1px solid goldenrod;
    display: block;
    margin: 4px auto;
    text-decoration: none;
    width: 98px;
    border-radius: 6px;
}
.nav a:hover {
    color:lightpink;
}
.content {
    padding: 6px;
    font-family: Arial, Helvetica, sans-serif;
    margin-left: 180px;
    max-width: 100%;
}
.hide {
    display: none;
}
.hide:target {
    display: block;
}
.container {
    display: flex;
    align-items: center;
    gap: 6px;
    flex-wrap: wrap;
    justify-content: center;
}
.nowrap {
    display: flex;
    gap: 10px;
    flex-wrap: no-wrap;
    justify-content: center;
    max-width: 860px;
    margin: 16px auto;
}
.art {
    max-width: 200px;
    display: block;
}
.frame {
    border: 3px double slategray;
    background-color: antiquewhite;
}
.frame:hover {
    border: 3px double sandybrown;
}
img {
    max-width: 100%;
    margin: auto;
}
h1 {
    font-family: 'Alex Brush';
    font-size: 42px;
}
h2 {
    font-family: 'Annie Use Your Telescope';
    font-size: 32px;
}
h3 {
    font-family: 'Aref Ruqaa Ink';
    font-size: 16px;
    font-weight: normal;
}
.small {
    margin: auto;
    border: 3px double burlywood;
    width: 270px;
    padding: 6px;
    height: 280px;
}
.scrap {
    background-image: url("art/bgscrap.png");
    border: 1px dashed mediumorchid;
}
.med {
    width: 416px;
    padding: 4px;
    height: 280px;
    overflow-y: auto;
    overflow-x: hidden;
}
.adob {
    background-image: url("art/bgadobe.png");
    border: 3px double burlywood;
}
#art {
    padding: 4px 108px;
    background-attachment: fixed;
}
#lis {
    background-image: url("art/bgdrkplad.png");
    padding: 12px;
    background-attachment: fixed;
}
#lis h2 {
    background-image: url("art/bgscrap.png");
    border: 1px dashed mediumorchid;
    max-width: 850px;
    margin: auto;
}
#hom {
    padding: 6px 188px;
}
#kit {
    background-image: url("art/bggeom.png");
    background-attachment: fixed;
    padding: 8px;
    height: 100vh;
}
#kit h2 {
    background-image: url("art/bgadobe.png");
    padding: 4px;
    max-width: 850px;
    margin: auto;
    border: 3px double burlywood;
}
#abo { 
    height: 100vh;
}
@media only screen and (max-width: 620px) {
    .nav {
      position: static;
      width: 100%;
      height: auto;
    }
    .content {
        margin-left: auto;
    }
    .nav a {
        display: inline;
    }
    .nowrap {
        flex-wrap: wrap;
    }
    .small {
        width: 100%;
        height: auto;
    }
    .art {
        max-width: 100%;
    }
    .med, #hom, #art {
        width: 100%;
        height: auto;
        padding: 4px;
    }
  }

